--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
                 <h2>시간별 기상 데이터 조회</h2>
             </div>
             <div class="form-grid">
-                <div class="form-group"><label for="latitude">위도:</label><input type="text" id="latitude" value="35"></div>
-                <div class="form-group"><label for="longitude">경도:</label><input type="text" id="longitude" value="126"></div>
+                <div class="form-group" style="grid-column: 1 / -1;">
+                    <label for="location-select">지역 선택:</label>
+                    <select id="location-select">
+                        <option value="35.74892,126.8644">김제 벽골제</option>
+                        <option value="35.79059,126.6079">새만금7-1공구</option>
+                    </select>
+                </div>
                 <div class="form-group"><label for="weather-date">조회 날짜:</label><input type="date" id="weather-date"></div>
                 <div class="form-group"><label for="begin-time">시작 시간:</label><input type="time" id="begin-time" value="00:00"></div>
                 <div class="form-group"><label for="until-time">종료 시간:</label><input type="time" id="until-time" value="23:00"></div>
@@ -46,7 +51,13 @@
         </div>
 
         <div class="step hidden" id="step-2">
-            <div class="step-header"><span class="step-number">2</span><h2>일별 기상 데이터 조회</h2></div>
+            <div class="step-header">
+                <span class="step-number">2</span>
+                <h2>일별 기상 데이터 조회</h2>
+            </div>
+            <div class="summary-display">
+                <span id="accumulated-temp">적산온도: -- °C</span>
+            </div>
             <div class="form-grid">
                 <div class="form-group"><label for="begin-date-daily">시작 날짜:</label><input type="date" id="begin-date-daily"></div>
                 <div class="form-group"><label for="until-date-daily">종료 날짜:</label><input type="date" id="until-date-daily"></div>
