API 매뉴얼 수정

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         </div>
 
         <div class="step hidden" id="step-3">
-             <div class="step-header"><span class="step-number">3</span><h2>병해충 위험도 예측 조회</h2></div>
+             <div class="step-header"><span class="step-number">3</span><h2>병해충 방제단계 예측 조회</h2></div>
              <div class="form-grid">
                 <div class="form-group">
-                    <label for="kidofcomdtyCd">작목 선택:</label>
-                    <select id="kidofcomdtyCd">
-                        <option value="K00001">콩</option>
-                        <option value="K00003">벼</option>
+                    <label for="kidofcomdtyId">작목 선택:</label>
+                    <select id="kidofcomdtyId">
+                        <option value="bean">콩</option>
+                        <option value="rice">벼</option>
                     </select>
                 </div>
             </div>
