--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
                         <option value="rice">벼</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="begin-date-pest">시작 날짜:</label>
+                    <input type="date" id="begin-date-pest">
+                </div>
+                <div class="form-group">
+                    <label for="until-date-pest">종료 날짜:</label>
+                    <input type="date" id="until-date-pest">
+                </div>
             </div>
             <button id="btn-step3" class="glow-on-hover">3. 병해충 위험도 조회</button>
             <div class="result-box" id="result-step3"></div>
