--- a/index.html
+++ b/index.html
@@ -104,15 +104,16 @@
         </div>
 
        <div class="step hidden" id="step-4">
-            <div class="step-header"><span class="step-number">4</span><h2>추천 농약 조회</h2></div>
+            <div class="step-header"><span class="step-number">4</span><h2>추천 농약 및 상세 처방전 조회</h2></div>
             <div class="form-grid">
                 <div class="form-group">
                     <label for="dipCd">병해충 선택:</label>
                     <select id="dipCd"></select>
                 </div>
                 <div class="form-group">
-                    <label for="agchm-select">농약 선택:</label>
+                    <label for="agchm-select">이미 살포한 농약:</label>
                     <select id="agchm-select"></select>
+                    <p class="help-text">기존 살포된 농약을 선택하시면 그 농약을 피해서 다른 농약을 추천해 드립니다.</p>
                 </div>
                 <div class="form-group" style="grid-column: 1 / -1;">
                     <label for="spray-date">살포예정일자:</label>
@@ -122,15 +123,13 @@
             <button id="btn-step4" class="glow-on-hover">4. 추천 농약 조회</button>
             <div class="result-box" id="result-step4"></div>
             <button id="excel-step4" class="excel-btn" disabled>추천 목록 엑셀 다운로드</button>
-        </div>
 
-        <div class="step hidden" id="step-5">
-            <div class="step-header"><span class="step-number">5</span><h2>상세 처방전 조회</h2></div>
-            <p>4단계에서 선택하신 조건으로 상세 처방전을 조회합니다.</p>
-            <button id="btn-step5" class="glow-on-hover">5. 상세 처방전 조회</button>
-            <div class="result-box" id="result-step5"></div>
-            <button id="excel-step5" class="excel-btn" disabled>처방전 엑셀 다운로드</button>
-        </div>
+            <div id="prescription-container" class="hidden">
+                <h3>상세 처방전</h3>
+                <div class="result-box" id="prescription-result"></div>
+                <button id="excel-prescription" class="excel-btn" disabled>처방전 엑셀 다운로드</button>
+            </div>
+       </div>
     </div>
     <script src="script.js"></script>
 </body>
